Fix stuff on Firefox

--- a/src/css/modules/_video.scss
+++ b/src/css/modules/_video.scss
@@ -4,6 +4,7 @@
     .gs-container {
         padding: 0;
         overflow: hidden;
+//         backface-visibility: hidden;
     }
 }
 
@@ -12,6 +13,7 @@
     white-space: nowrap;
     line-height: 0;
     transition: transform .3s ease-in;
+    // backface-visibility: hidden;
 }
 
 .trailer-playlist__item {
@@ -27,6 +29,7 @@
     opacity: 0.2;
     cursor: pointer;
     transition: opacity .3s ease-in;
+//     backface-visibility: hidden;
 
     @include mq(desktop) {
         width: $trailer-width-desktop;
@@ -67,6 +70,8 @@
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: 400;
+        backface-visibility: hidden;
     }
 }
 
